--- a/finance/templates/finance_base.html
+++ b/finance/templates/finance_base.html
@@ -23,10 +23,30 @@
         <title>{% block title %}{% endblock title %}</title>
     </head>
     <body>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                
+                <a class="navbar-brand" href="{% url 'expenses_list' %}"><i class="fa-solid fa-sack-dollar"></i>Finance Manager</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'expenses_list' %}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'categories_list' %}">Categorias</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'wallets_list' %}">Carteiras</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="pt-5 pb-5"></div>
         <div class="container">
-            <header>
-            <h1 class="m-5">Finance manager</h1>
-            </header>
             <section class="container ml-5 mr-5 mb-5 p-5">
                 {% block content %}{% endblock content %}
             </section>
