--- a/finance/templates/finance/create_expense.html
+++ b/finance/templates/finance/create_expense.html
@@ -38,8 +38,8 @@
                 {% render_field expense_form.proof class='form-control' %}
             </div>
             <div class="mb-3">
-                <label for="inputDateAndHour" class="form-label">Data e hora</label>
-                {% render_field expense_form.date_and_hour type='datetime-local' class='form-control' %}
+                <label for="inputDateAndHour" class="form-label">Data</label>
+                {% render_field expense_form.date type='date' class='form-control' %}
             </div>
             <div class="mb-3">
                 <label for="inputStatus" class="form-label">Status</label>
