--- a/finance/templates/finance/update_expense.html
+++ b/finance/templates/finance/update_expense.html
@@ -39,7 +39,7 @@
             </div>
             <div class="mb-3">
                 <label for="inputDateAndHour" class="form-label">Data e hora</label>
-                {% render_field update_expense_form.date_and_hour type='datetime-local' class='form-control' %}
+                {% render_field update_expense_form.date type='date' class='form-control' %}
             </div>
             <div class="mb-3">
                 <label for="inputStatus" class="form-label">Status</label>
