--- a/finance/templates/finance_base.html
+++ b/finance/templates/finance_base.html
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'wallets_list' %}">Carteiras</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Sair</a>
+                        </li>
                     </ul>
                 </div>
             </div>
