--- a/finance/templates/finance_base.html
+++ b/finance/templates/finance_base.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -25,7 +25,7 @@
     <body>
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{% url 'expenses_list' %}"><i class="fa-solid fa-sack-dollar"></i>Finance Manager</a>
+                <a class="navbar-brand" href="{% url 'expenses_list' %}"><i class="fa-solid fa-sack-dollar"></i>Controle Financeiro Simples</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -56,5 +56,7 @@
         
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+        {% block scripts %}{% endblock scripts %}
     </body>
 </html>
