--- a/users/templates/users/password_change_form.html
+++ b/users/templates/users/password_change_form.html
@@ -10,33 +10,32 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-        <title>Registrar</title>
+        <title>Alterar senha</title>
     </head>
     <body>
         <div class="container mt-5">
-            <h1>Registrar</h1>
+            <h1>Alterar senha</h1>
             <p>
-                Preencha o formulário para fazer o registro.
+                Preencha o formulário para Alterar sua senha.
             </p>
             <form method="post">
                 {% csrf_token %}
-                {% comment %} {{ form.as_div }} {% endcomment %}
                 <div class="mb-3">
-                    {% for error in form.email.errors %}
+                    {% for error in form.old_password.errors %}
                         <div class="alert alert-danger">
                             <strong>{{ error|escape }}</strong>
                         </div>
                     {% endfor %}
-                    {% for error in form.password2.errors %}
+                    {% for error in form.new_password1.errors %}
                         <div class="alert alert-danger">
                             <strong>{{ error|escape }}</strong>
                         </div>
                     {% endfor %}
-                    <label for="inputName" class="form-label">Email*:</label>
-                    {% render_field form.email class='form-control' %}
-                </div>
-                <div class="mb-3">
-                    <label for="inputName" class="form-label">Senha*:</label>
+                    {% for error in form.new_password2.errors %}
+                        <div class="alert alert-danger">
+                            <strong>{{ error|escape }}</strong>
+                        </div>
+                    {% endfor %}
                     <div class="alert alert-warning" role="alert">
                         <ul>
                             <li>Sua senha não pode ser muito parecida com suas outras informações pessoais.</li>
@@ -45,14 +44,15 @@
                             <li>Sua senha não pode ser totalmente numérica.</li>
                         </ul>
                     </div>
-                    {% render_field form.password1 class='form-control' %}
-                </div>
-                <div class="mb-3">
-                    <label for="inputName" class="form-label">Repita a senha*:</label>
-                    {% render_field form.password2 class='form-control' %}
+                    <label for="id_old_password" class="form-label">Senha Antiga</label>
+                    {% render_field form.old_password class='form-control' %}
+                    <label for="id_new_password1" class="form-label">Nova senha</label>
+                    {% render_field form.new_password1 class='form-control' %}
+                    <label for="id_new_password2" class="form-label">Confirmação da nova senha</label>
+                    {% render_field form.new_password2 class='form-control' %}
                 </div>
                 <br>
-                <input class="btn btn-success" type="submit" value="Registrar">
+                <input class="btn btn-success" type="submit" value="Enviar instruções">
             </form>
         </div>
 
