--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,7 +1,7 @@
 {% load widget_tweaks %}
 
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
